2015-06-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): Include JPEG headers to obtain
	its BITS_IN_JSAMPLE definition.  This is needed so we can know
	what JPEG depth libtiff supports.

	* www/index.rst: Add mention of GraphicsMagick having zero defects
	reported by Coverity.

2015-06-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Magick++/lib/STL.cpp (adaptiveThresholdImage): Add a new
	constructor which accepts a 'double' offset value.  The previous
	version of this constructor is deprecated and subject to removal
	in the future.  The size of the class is enlarged to store a
	'double' and so this is a break in the ABI when this class was
	used.  Code using this class should be re-compiled.

	* Magick++/lib/Image.cpp (adaptiveThreshold): Add a new version of
	this method which accepts a 'double' offset value.  The previous
	version of the method is deprecated and subject to removal in the
	future.  Problem was reported by Dirk Lemstra.

2015-05-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/gray.c (ReadGRAYImage): Based on feedback from Glenn,
	return a gray image from the reader, even if a channelized format
	specifier is given.

2015-05-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/gray.c (ReadGRAYImage): Fix read glitch caused by
	incorrect memset(). Added missing break statement to switch.
	Added more logging.
	(RegisterGRAYImage): Register "gray" formats R, G, B, C, M, Y, K,
	O such that they are not triggered by file extension.  It is
	necessary to apply a magick prefix to the file name (or set image
	magick in the API) in order to force using these formats.  This
	avoids accidents in case the file extension was used for some
	other purpose.

2015-05-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/gray.c: Added support for "GRAYA" format.  Format
	specifiers "R", "G", "B", "A", "C", "M", and "Y" may now be used