@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020150610"
-#define public MagickPackageReleaseDate "snapshot-20150610"
+#define public MagickPackageVersionAddendum ".020150614"
+#define public MagickPackageReleaseDate "snapshot-20150614"
