@@ -489,7 +489,8 @@ static void AnimateUsage(void)
       "-geometry geometry   preferred size and location of the Image window",
       "-help                print program options",
       "-interlace type      None, Line, Plane, or Partition",
-      "-limit type value    Disk, Files, Map, Memory, or Pixels resource limit",
+      "-limit type value    Disk, File, Map, Memory, Pixels, Width, Height or",
+      "                     Threads resource limit",
       "-log format          format of debugging information",
       "-matte               store matte channel if the image has one",
       "-map type            display image using this Standard Colormap",
@@ -497,7 +498,7 @@ static void AnimateUsage(void)
       "-monochrome          transform image to black and white",
       "-noop                do not apply options to image",
       "-pause               seconds to pause before reanimating",
-      "-remote command      execute a command in an remote display process",
+      "-remote command      execute a command in a remote display process",
       "-rotate degrees      apply Paeth rotation to the image",
       "-sampling-factor HxV[,...]",
       "                     horizontal and vertical sampling factors",
@@ -2834,7 +2835,8 @@ static void CompareUsage(void)
       "-highlight-style style",
       "                     pixel highlight style (assign, threshold, tint, xor)",
       "-interlace type      None, Line, Plane, or Partition",
-      "-limit type value    Disk, Files, Map, Memory, or Pixels resource limit",
+      "-limit type value    Disk, File, Map, Memory, Pixels, Width, Height or",
+      "                     Threads resource limit",
       "-log format          format of debugging information",
       "-matte               store matte channel if the image has one",
       "-maximum-error       maximum total difference before returning error",
@@ -4112,7 +4114,8 @@ static void CompositeUsage(void)
       "-help                print program options",
       "-interlace type      None, Line, Plane, or Partition",
       "-label name          ssign a label to an image",
-      "-limit type value    Disk, Files, Map, Memory, or Pixels resource limit",
+      "-limit type value    Disk, File, Map, Memory, Pixels, Width, Height or",
+      "                     Threads resource limit",
       "-log format          format of debugging information",
       "-matte               store matte channel if the image has one",
       "-monitor             show progress indication",
@@ -6145,6 +6148,7 @@ static void ConvertUsage(void)
       "-blur geometry       blur the image",
       "-border geometry     surround image with a border of color",
       "-bordercolor color   border color",
+      "-box color           set the color of the annotation bounding box",
       "-channel type        extract a particular color channel from image",
       "-charcoal radius     simulate a charcoal drawing",
       "-chop geometry       remove pixels from the image interior",
@@ -6158,6 +6162,7 @@ static void ConvertUsage(void)
       "-compose operator    composite operator",
       "-compress type       image compression type",
       "-contrast            enhance or reduce the image contrast",
+      "-convolve kernel     convolve image with the specified convolution kernel",
       "-crop geometry       preferred size and location of the cropped image",
       "-cycle amount        cycle the image colormap",
       "-debug events        display copious debugging information",
@@ -6190,7 +6195,7 @@ static void ConvertUsage(void)
       "-gaussian geometry   gaussian blur an image",
       "-geometry geometry   perferred size or location of the image",
       "-green-primary point chomaticity green primary point",
-      "-gravity type        horizontal and vertical text placement",
+      "-gravity type        horizontal and vertical text/object placement",
       "-hald-clut clut      apply a Hald CLUT to the image",
       "-help                print program options",
       "-implode amount      implode image pixels about the center",
@@ -6199,14 +6204,18 @@ static void ConvertUsage(void)
       "-label name          assign a label to an image",
       "-lat geometry        local adaptive thresholding",
       "-level value         adjust the level of image contrast",
-      "-limit type value    Disk, Files, Map, Memory, or Pixels resource limit",
-      "-list type           Color, Delegate, Format, Magic, Module, or Type",
+      "-limit type value    Disk, File, Map, Memory, Pixels, Width, Height or",
+      "                     Threads resource limit",
+      "-linewidth width     the line width for subsequent draw operations",
+      "-list type           Color, Delegate, Format, Magic, Module, Resource,",
+      "                     or Type",
       "-log format          format of debugging information",
       "-loop iterations     add Netscape loop extension to your GIF animation",
       "-magnify             interpolate image to double size",
       "-map filename        transform image colors to match this set of colors",
       "-mask filename       set the image clip mask",
       "-matte               store matte channel if the image has one",
+      "-mattecolor color    specify the color to be used with the -frame option",
       "-median radius       apply a median filter to the image",
       "-minify              interpolate the image to half size",
       "-modulate value      vary the brightness, saturation, and hue",
@@ -6241,6 +6250,7 @@ static void ConvertUsage(void)
       "-red-primary point   chomaticity red primary point",
       "-region geometry     apply options to a portion of the image",
       "-render              render vector graphics",
+      "+render              disable rendering vector graphics",
       "-resample geometry   resample to horizontal and vertical resolution",
       "+repage              reset current page offsets to default",
       "-repage geometry     adjust current page offsets by geometry",
@@ -6551,7 +6561,8 @@ static void DisplayUsage(void)
       "-immutable           displayed image cannot be modified",
       "-interlace type      None, Line, Plane, or Partition",
       "-label name          assign a label to an image",
-      "-limit type value    Disk, Files, Map, Memory, or Pixels resource limit",
+      "-limit type value    Disk, File, Map, Memory, Pixels, Width, Height or",
+      "                     Threads resource limit",
       "-log format          format of debugging information",
       "-map type            display image using this Standard Colormap",
       "-matte               store matte channel if the image has one",
@@ -8664,8 +8675,8 @@ static void IdentifyUsage(void)
       "-format \"string\"   output formatted image characteristics",
       "-help                print program options",
       "-interlace type      None, Line, Plane, or Partition",
-      "-limit type value    Disk, Files, Map, Memory, or Pixels resource limit",
-
+      "-limit type value    Disk, File, Map, Memory, Pixels, Width, Height or",
+      "                     Threads resource limit",
       "-log format          format of debugging information",
       "-monitor             show progress indication",
       "-ping                efficiently determine image attributes",
@@ -13669,6 +13680,7 @@ static void MogrifyUsage(void)
       "-blur radius         blur the image",
       "-border geometry     surround image with a border of color",
       "-bordercolor color   border color",
+      "-box color           set the color of the annotation bounding box",
       "-channel type        extract a particular color channel from image",
       "-charcoal radius     simulate a charcoal drawing",
       "-chop geometry       remove pixels from the image interior",
@@ -13679,6 +13691,7 @@ static void MogrifyUsage(void)
       "-compose operator    composite operator",
       "-compress type       image compression type",
       "-contrast            enhance or reduce the image contrast",
+      "-convolve kernel     convolve image with the specified convolution kernel",
       "-create-directories  create output directories if required",
       "-crop geometry       preferred size and location of the cropped image",
       "-cycle amount        cycle the image colormap",
@@ -13710,6 +13723,7 @@ static void MogrifyUsage(void)
       "-gamma value         level of gamma correction",
       "-gaussian geometry   gaussian blur an image",
       "-geometry geometry   perferred size or location of the image",
+      "-gravity type        horizontal and vertical text/object placement",
       "-green-primary point chomaticity green primary point",
       "-implode amount      implode image pixels about the center",
       "-interlace type      None, Line, Plane, or Partition",
@@ -13718,14 +13732,18 @@ static void MogrifyUsage(void)
       "-label name          assign a label to an image",
       "-lat geometry        local adaptive thresholding",
       "-level value         adjust the level of image contrast",
-      "-limit type value    Disk, Files, Map, Memory, or Pixels resource limit",
-      "-list type           Color, Delegate, Format, Magic, Module, or Type",
+      "-limit type value    Disk, File, Map, Memory, Pixels, Width, Height or",
+      "                     Threads resource limit",
+      "-linewidth width     the line width for subsequent draw operations",
+      "-list type           Color, Delegate, Format, Magic, Module, Resource,",
+      "                     or Type",
       "-log format          format of debugging information",
       "-loop iterations     add Netscape loop extension to your GIF animation",
       "-magnify             interpolate image to double size",
       "-map filename        transform image colors to match this set of colors",
       "-mask filename       set the image clip mask",
       "-matte               store matte channel if the image has one",
+      "-mattecolor color    specify the color to be used with the -frame option",
       "-median radius       apply a median filter to the image",
       "-minify              interpolate the image to half size",
       "-modulate value      vary the brightness, saturation, and hue",
@@ -13758,6 +13776,8 @@ static void MogrifyUsage(void)
       "-recolor matrix      apply a color translation matrix to image channels",
       "-red-primary point   chomaticity red primary point",
       "-region geometry     apply options to a portion of the image",
+      "-render              render vector graphics",
+      "+render              disable rendering vector graphics",
       "-resample geometry   resample to horizontal and vertical resolution",
       "+repage              reset current page offsets to default",
       "-repage geometry     adjust current page offsets by geometry",
@@ -13775,6 +13795,7 @@ static void MogrifyUsage(void)
       "+set attribute       unset image attribute",
       "-shade degrees       shade the image using a distant light source",
       "-sharpen radius      sharpen the image",
+      "-shave geometry      shave pixels from the image edges",
       "-shear geometry      slide one edge of the image along the X or Y axis",
       "-size geometry       width and height of image",
       "-solarize threshold  negate all pixels above the threshold level",
@@ -15091,7 +15112,8 @@ static void MontageUsage(void)
       "-help                print program options",
       "-interlace type      None, Line, Plane, or Partition",
       "-label name          assign a label to an image",
-      "-limit type value    Disk, Files, Map, Memory, or Pixels resource limit",
+      "-limit type value    Disk, File, Map, Memory, Pixels, Width, Height or",
+      "                     Threads resource limit",
       "-log format          format of debugging information",
       "-matte               store matte channel if the image has one",
       "-mattecolor color    color to be used with the -frame option",
@@ -16096,7 +16118,8 @@ static void ImportUsage(void)
       "-interlace type      None, Line, Plane, or Partition",
       "-help                print program options",
       "-label name          assign a label to an image",
-      "-limit type value    Disk, Files, Map, Memory, or Pixels resource limit",
+      "-limit type value    Disk, File, Map, Memory, Pixels, Width, Height or",
+      "                     Threads resource limit",
       "-log format          format of debugging information",
       "-monitor             show progress indication",
       "-monochrome          transform image to black and white",
