@@ -35,6 +35,15 @@
 <div class="document">
 
 
+<p>2015-06-14  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>magick/command.c: Add/fix utility usage messages for -box,
+-convolve, -gravity, -linewidth, -list, -mattecolor, -render and
+-shave.  Resolves SourceForge issue #302 &quot;MogrifyUsage prints
+incomplete information &quot;.</li>
+</ul>
+</blockquote>
 <p>2015-06-10  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
