@@ -74,7 +74,7 @@ GCC 4.2 (or later), or use of any C compiler supporting at least the
 purpose operating system that runs on 32-bit or 64-bit CPUs.
 GraphicsMagick is available for virtually any Unix or Unix-like system,
 including Linux. It also runs under <a class="reference external" href="INSTALL-windows.html">Windows</a>
-2000 and later (Windows 2000, XP, Vista, and 7), and MacOS-X.</p>
+2000 and later (Windows 2000, XP, Vista, 7, 8.X, 10), and MacOS-X.</p>
 <p>GraphicsMagick supports huge images and has been tested with
 gigapixel-size images. GraphicsMagick can create new images on the
 fly, making it suitable for building dynamic Web
